@@ -3403,6 +3403,76 @@ namespace Chummer
                 if (objPower != null)
                     objPower.Extra = strSelectedValue;
             }
+            else if (bonusNode["selectcategories"] != null)
+            {
+                using (XmlNodeList xmlSelectCategoryList = bonusNode.SelectNodes("selectcategories"))
+                {
+                    if (xmlSelectCategoryList?.Count > 0)
+                    {
+                        foreach (XmlNode xmlSelectCategory in xmlSelectCategoryList)
+                        {
+                            // Display the Select Category window and record which Category was selected.
+                            using (new FetchSafelyFromPool<List<ListItem>>(Utils.ListItemListPool,
+                                                                           out List<ListItem> lstGeneralItems))
+                            {
+                                using (XmlNodeList xmlCategoryList = xmlSelectCategory.SelectNodes("category"))
+                                {
+                                    if (xmlCategoryList?.Count > 0)
+                                    {
+                                        foreach (XmlNode objXmlCategory in xmlCategoryList)
+                                        {
+                                            string strInnerText = objXmlCategory.InnerText;
+                                            lstGeneralItems.Add(new ListItem(strInnerText,
+                                                                             _objCharacter.TranslateExtra(
+                                                                                 strInnerText, GlobalSettings.Language,
+                                                                                 "weapons.xml")));
+                                        }
+                                    }
+                                }
+
+                                using (ThreadSafeForm<SelectItem> frmPickCategory = ThreadSafeForm<SelectItem>.Get(() =>
+                                           new SelectItem
+                                           {
+                                               Description = !string.IsNullOrEmpty(_strFriendlyName)
+                                                   ? string.Format(GlobalSettings.CultureInfo,
+                                                       LanguageManager.GetString(
+                                                           "String_Improvement_SelectSkillNamed"), _strFriendlyName)
+                                                   : LanguageManager.GetString("Title_SelectWeaponCategory")
+                                           }))
+                                {
+                                    frmPickCategory.MyForm.SetGeneralItemsMode(lstGeneralItems);
+
+                                    if (ForcedValue.StartsWith("Adept:", StringComparison.Ordinal)
+                                        || ForcedValue.StartsWith("Magician:", StringComparison.Ordinal))
+                                        ForcedValue = string.Empty;
+
+                                    if (!string.IsNullOrEmpty(ForcedValue))
+                                    {
+                                        frmPickCategory.MyForm.Opacity = 0;
+                                        frmPickCategory.MyForm.ForceItem(ForcedValue);
+                                    }
+
+                                    // Make sure the dialogue window was not canceled.
+                                    if (frmPickCategory.ShowDialogSafe(_objCharacter) == DialogResult.Cancel)
+                                    {
+                                        throw new AbortedException();
+                                    }
+
+                                    SelectedValue = frmPickCategory.MyForm.SelectedItem;
+                                }
+                            }
+
+                            _objCharacter.Powers.ForEach(objPower =>
+                            {
+                                if (objPower.InternalId == SourceName)
+                                {
+                                    objPower.Extra = SelectedValue;
+                                }
+                            });
+                        }
+                    }
+                }
+            }
             else if (bonusNode["name"] != null)
             {
                 strSelectedValue = bonusNode["name"].InnerText;
