@@ -116,7 +116,13 @@
       </adeptwayrequires>
       <bonus>
         <weaponcategorydv>
-          <selectskill limittoskill="Astral Combat,Blades,Clubs,Exotic Melee Weapon,Unarmed Combat" />
+          <selectcategories>
+            <category>Astral Combat</category>
+            <category>Blades</category>
+            <category>Clubs</category>
+            <category>Exotic Melee Weapon</category>
+            <category>Unarmed Combat</category>
+          </selectcategories>
           <bonus>1</bonus>
         </weaponcategorydv>
       </bonus>
