@@ -81,6 +81,9 @@ Application Changes:
 - Costs for shared advanced lifestyles, as well as lifestyles in general, now properly follow the order of operations specified in HT pp. 139-140.
 - Associating PDF files with sourcebooks added by custom data is now possible, as is the functionality to automatically open them to a specific page when a source entry is clicked on.
 - Mods can now be properly added or removed from weapon mounts after character creation.
+- The selection system (required/forbidden) can now evaluate whether a character has an adept power of specific ratings, using the rating, minrating or maxrating attributes. This allows for the use of rating-based requirements on adept powers, ie checking whether a character has two levels of Keratin Control.
+- Fixed a bug in the echo/metamagics selection system that incorrectly showed false if the character had the metamagic or echo.
+- Fixed implementation of the weaponcategorydv bonus node using skill names rather than weapon categories. This caused issues for Unarmed weapons incorrectly looking for the Unarmed Combat skill rather than the Unarmed category. 
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
@@ -123,6 +126,7 @@ Data Changes:
 - Removed the Delnar Skills Remake (Lite) custom dataset because it cannot properly be implemented in Chummer at its current time.
 - Morgan Cutlass' page reference is now properly p. 464.
 - Added missing Transys Graygul cyberdeck whose stats, cost, and availability were buried in an NPC statblock.
+- Fixed implementation of the Critical Strike power to properly provide the bonus for Unarmed Combat. Closes #5180
 
 Changed/New Strings:
 - LimitCondition_SkillsActiveLeadership
